
2025-05-19  David Declerck <david.declerck@ocamlpro.com>

	* testsuite.src/run_misc.at, testsuite.src/syn_misc.at:
	  reduce the use of sed by using SOURCE_DATE_EPOCH when possible
	  and using @&t@ quadrigraphs in expected output with trailing spaces
	* listing-sed.sh: removed as no longer needed
	* atlocal.in, atlocal_win: remove the no longer needed UNIFY_LISTING variable

2025-05-13  David Declerck <david.declerck@ocamlpro.com>

	* atlocal.in, atlocal_win, cobol85/Makefile.am,
	  cobol85/Makefile.module.in, testsuite.src/*.at:
	  use the new DIFF variable to invoke the diff command

2025-03-16  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: adjusted to handle newer MSYS2's setting OSTYPE=cygwin

2024-10-05  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_win: export new definition COB_ON_WINDOWS
	  to allow the testsuite skipping/failing tests
	* run_prog_manual.sh.in: fix extranous $COBCRUN for all test runners
	* run_prog_manual.sh.in (xterm): use all parameters, not only the first

2024-10-02  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_win: allow overriding COB_CC during tests

2024-09-09  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in:  adding testrunner tmux as alternative
	  to screen; allow to override the deduced test runner by environment
	  variable TESTRUNNER; new option to call with parameter "attach" and
	  "kill" for either attaching to or killing test runner sessions in
	  screen/tmux; enhance portability and use abs_builddir
	* run_prog_manual.sh.in (_test_with_screen): use separate SCREENDIR
	  to ensure using system defaults and work around WSL regressions
	* run_prog_manual.sh.in (_test_with_cmd): work around cmd quoting
	  by using a dynamically created sub command file
	* atlocal.in (set_utf8_locale): new function for the testsuite
	  enabling tests to either run with UTF8 locale or skip
	* atlocal.in: use configure-setup for the grep binary
	* atlocal_win: updated to current atlocal.in
